const test = require('./utils/test');

test('tv.sohu.com',
  'http://tv.sohu.com/20151224/n432381576.shtml');

test('my.tv.sohu.com',
  'http://my.tv.sohu.com/us/100569193/88655884.shtml');
